[gd_scene load_steps=4 format=3 uid="uid://xrqkabm8lrxj"]

[ext_resource type="Script" path="res://options/options.gd" id="1_1bswr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2tm7"]
bg_color = Color(0.984314, 0.996078, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vqmm"]
bg_color = Color(0.0901961, 0.0352941, 0.0509804, 1)

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_1bswr")

[node name="TextboxContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -130.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_d2tm7")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vqmm")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="VBoxContainer" parent="TextboxContainer/MarginContainer/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="FunButton" type="Button" parent="TextboxContainer/MarginContainer/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.996078, 0.811765, 1)
theme_override_font_sizes/font_size = 32
text = "This is filler text to make sure that everything fitsllljjjjjjjj"

[node name="PracticalButton" type="Button" parent="TextboxContainer/MarginContainer/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.996078, 0.811765, 1)
theme_override_font_sizes/font_size = 32
text = "This is filler text to make sure that everything fitsllljjjjjjjj"

[node name="EvilButton" type="Button" parent="TextboxContainer/MarginContainer/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.996078, 0.811765, 1)
theme_override_font_sizes/font_size = 32
text = "This is filler text to make sure that everything fitsllljjjjjjjj"

[connection signal="pressed" from="TextboxContainer/MarginContainer/Panel/MarginContainer/HBoxContainer/FunButton" to="." method="_on_fun_button_pressed"]
[connection signal="pressed" from="TextboxContainer/MarginContainer/Panel/MarginContainer/HBoxContainer/PracticalButton" to="." method="_on_practical_button_pressed"]
[connection signal="pressed" from="TextboxContainer/MarginContainer/Panel/MarginContainer/HBoxContainer/EvilButton" to="." method="_on_evil_button_pressed"]
